--- a/nav.html
+++ b/nav.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <section>
+        <div id="home">
         <nav>
             <img src="/images/b712c679dc2b27685a55e83a85c296d9.jpg" alt="">
             <div class="navbar">
@@ -38,6 +39,191 @@
         <a href="register">
             <button>Sign up</button>
         </a>
+    </div>
+        </section>
+        <section>
+            <div class="menu">
+                <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div><div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                    
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="menuitems">
+                <div class="pic">
+                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+                </div>
+                <div class="content">
+                    <p>
+                        Ksh.350
+                    </p>
+                    <a href="order.html" target="_blank">
+                        <button>
+                            + Order 
+                        </button>
+                    </a>
+                </div>
+            </div>
+            </div>
         </section>
         <section class="cont">
             <div class="contact">
