add this project

--- a/nav.html
+++ b/nav.html
@@ -36,194 +36,10 @@
         <a href="login.html">
             <button>Login</button>
         </a>
-        <a href="register">
+        <a href="register.html">
             <button>Sign up</button>
         </a>
     </div>
-        </section>
-        <section>
-            <div class="menu">
-                <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div><div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                    
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="menuitems">
-                <div class="pic">
-                    <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-                </div>
-                <div class="content">
-                    <p>
-                        Ksh.350
-                    </p>
-                    <a href="order.html" target="_blank">
-                        <button>
-                            + Order 
-                        </button>
-                    </a>
-                </div>
-            </div>
-            </div>
         </section>
         <section class="cont">
             <div class="contact">
