add this project

--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
             </div>
             <div class="content">
                 <p>
-                    
+                    Latte
                 </p>
                 <p>
                     Ksh.350
@@ -44,6 +44,9 @@
                 <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
             </div>
             <div class="content">
+                <p>
+                    Latte
+                </p>
                 <p>
                     Ksh.350
                 </p>
@@ -61,20 +64,8 @@
             </div>
             <div class="content">
                 <p>
-                    Ksh.350
+                    Latte
                 </p>
-                <a href="order.html" target="_blank">
-                    <button>
-                        + Order 
-                    </button>
-                </a>
-            </div>
-        </div>
-        <div class="menuitems">
-            <div class="pic">
-                <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-            </div>
-            <div class="content">
                 <p>
                     Ksh.350
                 </p>
@@ -91,20 +82,8 @@
             </div>
             <div class="content">
                 <p>
-                    Ksh.350
+                    Latte
                 </p>
-                <a href="order.html" target="_blank">
-                    <button>
-                        + Order 
-                    </button>
-                </a>
-            </div>
-        </div>
-        <div class="menuitems">
-            <div class="pic">
-                <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-            </div>
-            <div class="content">
                 <p>
                     Ksh.350
                 </p>
@@ -121,20 +100,8 @@
             </div>
             <div class="content">
                 <p>
-                    Ksh.350
+                    Latte
                 </p>
-                <a href="order.html" target="_blank">
-                    <button>
-                        + Order 
-                    </button>
-                </a>
-            </div>
-        </div>
-        <div class="menuitems">
-            <div class="pic">
-                <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-            </div>
-            <div class="content">
                 <p>
                     Ksh.350
                 </p>
@@ -151,20 +118,8 @@
             </div>
             <div class="content">
                 <p>
-                    Ksh.350
+                    Latte
                 </p>
-                <a href="order.html" target="_blank">
-                    <button>
-                        + Order 
-                    </button>
-                </a>
-            </div>
-        </div>
-        <div class="menuitems">
-            <div class="pic">
-                <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
-            </div>
-            <div class="content">
                 <p>
                     Ksh.350
                 </p>
@@ -181,6 +136,9 @@
             </div>
             <div class="content">
                 <p>
+                    Latte
+                </p>
+                <p>
                     Ksh.350
                 </p>
                 <a href="order.html" target="_blank">
@@ -195,6 +153,81 @@
                 <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
             </div>
             <div class="content">
+                <p>
+                    Latte
+                </p>
+                <p>
+                    Ksh.350
+                </p>
+                <a href="order.html" target="_blank">
+                    <button>
+                        + Order 
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="menuitems">
+            <div class="pic">
+                <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+            </div>
+            <div class="content">
+                <p>
+                    Latte
+                </p>
+                <p>
+                    Ksh.350
+                </p>
+                <a href="order.html" target="_blank">
+                    <button>
+                        + Order 
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="menuitems">
+            <div class="pic">
+                <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+            </div>
+            <div class="content">
+                <p>
+                    Latte
+                </p>
+                <p>
+                    Ksh.350
+                </p>
+                <a href="order.html" target="_blank">
+                    <button>
+                        + Order 
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="menuitems">
+            <div class="pic">
+                <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+            </div>
+            <div class="content">
+                <p>
+                    Latte
+                </p>
+                <p>
+                    Ksh.350
+                </p>
+                <a href="order.html" target="_blank">
+                    <button>
+                        + Order 
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="menuitems">
+            <div class="pic">
+                <img src="/images/57e114f83e455f1c6d565fa6c6839963.jpg" alt="">
+            </div>
+            <div class="content">
+                <p>
+                    Latte
+                </p>
                 <p>
                     Ksh.350
                 </p>
