--- a/nav.html
+++ b/nav.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About us</a></li>
-                    <li><a href="">Menu</a></li>
+                    <li><a href="menu.html">Menu</a></li>
                     <li><a href="">contact us</a></li>
                 </ul>
             </div>
