--- a/register.html
+++ b/register.html
@@ -20,12 +20,12 @@
                     <img src="/images/b712c679dc2b27685a55e83a85c296d9.jpg" alt=""><br>
                     <div class="forms">
                         <h2>Register</h2>
-                    <input class="b1" type="text" placeholder="First name"><br>
-                    <input class="b1" type="text" placeholder="Last name"><br>
-                    <input class="b1" type="text" placeholder="Username"><br>
-                    <input class="b1" type="email" placeholder="Email"><br>
-                    <input class="b1" type="password" placeholder="password"><br>
-                    <input class="b1" type="password" placeholder="confirm password">
+                    <input class="b1" type="text" placeholder="First name" required><br>
+                    <input class="b1" type="text" placeholder="Last name" required><br>
+                    <input class="b1" type="text" placeholder="Username" required><br>
+                    <input class="b1" type="email" placeholder="Email" required><br>
+                    <input class="b1" type="password" placeholder="password" required><br>
+                    <input class="b1" type="password" placeholder="confirm password" required>
                     <br>
                     <a href="nav.html">
                         <input class="sub" type="submit" placeholder="login"><br>
