add this project

--- a/order.html
+++ b/order.html
@@ -37,17 +37,25 @@
                     <label for="mpesa">M-Pesa</label>
                     <div class="details">
                         <p>Enter M-Pesa details:</p>
-                        <!-- M-Pesa Payment Details -->
                         <input type="text" placeholder="Phone Number">
                         <input type="text" placeholder="PIN">
                     </div>
                 </div>
+                <a href="menu.html">
+                    <button class="back">Back</button>
+
+                </a>
+
                 <button class="checkout-button" onclick="confirmPayment()">Checkout</button>
             </div>
+            
             <div class="payment-details">
                 <h2>Payment Details</h2>
-                <!-- Display Payment Details -->
                 <p>Total Amount: $100</p>
+                <div class="imgOrder">
+                    <img src="/images/order.jpg" alt="">
+                </div>
+                
             </div>
         </div>
     </section>
