--- a/order.html
+++ b/order.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css" integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
-    <link rel="stylesheet" href="/order.css">
+    <link rel="stylesheet" href="/nav.css">
     <title>Checkout</title>
 </head>
 <body>
     <section>
+        <div class="ord">
         <div class="container">
             <div class="options">
                 <h2>Payment Options</h2>
@@ -57,6 +58,7 @@
                 </div>
                 
             </div>
+        </div>
         </div>
     </section>
     <script>
