add this project

--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
                     <input class="b1" type="password" placeholder="password" required><br>
                     <input class="b1" type="password" placeholder="confirm password" required>
                     <br>
-                    <a href="nav.html">
+                    <a href="index.html">
                         <input class="sub" type="submit" placeholder="login"><br>
                     </a>
                     </div>
