add this project

--- a/order.html
+++ b/order.html
@@ -54,7 +54,7 @@
                 <h2>Payment Details</h2>
                 <p>Total Amount: $100</p>
                 <div class="imgOrder">
-                    <img src="images/order.jpg" alt="">
+                    <img src="/images/order.jpg" alt="">
                 </div>
                 
             </div>
