add this project

--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,11 @@
                 <li><a href="">contact us</a></li>
             </ul>
         </div>
+        <a href="order.html" target="_blank">
+            <button>
+                Order
+            </button>
+        </a>
     </nav>
     
     <section>
@@ -34,7 +39,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -51,7 +56,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
                 
@@ -70,7 +75,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -88,7 +93,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -106,7 +111,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -124,7 +129,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -142,7 +147,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -160,7 +165,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -178,7 +183,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -196,7 +201,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -214,7 +219,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
@@ -232,7 +237,7 @@
                 </p>
                 <a href="order.html" target="_blank">
                     <button>
-                        + Order 
+                        + add to cart
                     </button>
                 </a>
             </div>
