add this project

--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
         <img src="/images/b712c679dc2b27685a55e83a85c296d9.jpg" alt="">
         <div class="navbar">
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="">Menu</a></li>
                 <li><a href="">contact us</a></li>
             </ul>
