--- a/login.html
+++ b/login.html
@@ -22,8 +22,9 @@
                     <input class="b1" type="email" placeholder="Email"><br>
                     <input class="b1" type="password" placeholder="password">
                     <br>
-                    <input class="sub" type="submit" placeholder="login"><br>
-
+                    <a href="menu.html">
+                        <input class="sub" type="submit" placeholder="login"><br>
+                    </a>
                     <a href="https://github.com/vutagwa" target="_blank">Forgot password</a>  
                 </div>
                 
